# flashcards

./: .env  .gitignore  README.md  main.py  pom.xml  pyproject.toml
alembic/: env.py
alembic/versions/: 242fc811a36f_users_table.py  731da6debb51_bundles_table.py  7722cc8fb9c2_flashcards_table.py  8c026da732e1_user_roles_table.py  bdf645dc86a5_roles_table.py  c90c96338ce4_initial_roles.py
app/core/: db_config.py  env_settings.py  error_handler.py  security.py  utils.py
app/crud/: bundle.py  flashcard.py  role.py  user.py
app/data/: excel.xlsx  text.txt
app/models/: models.py
app/routes/: auth.py  bundle.py  flashcard.py  role.py  user.py
app/schemas/: auth.py  bundle.py  common.py  flashcard.py  role.py  user.py
app/services/: auth.py  bundle.py  flashcard.py  role.py
app/sevices/: auth.py  bundle.py
src/main/java/com/dev/flashcards/: FlashcardsApplication.java  ServletInitializer.java
src/main/java/com/dev/flashcards/config/: ApplicationConfig.java  DatasourceConfig.java  MyBatisConfig.java  SwaggerConfig.java
src/main/java/com/dev/flashcards/controller/: AuthController.java  BundleController.java  CardController.java  UserController.java
src/main/java/com/dev/flashcards/dto/: LoginUserDto.java  RegisterUserDto.java  UserDto.java
src/main/java/com/dev/flashcards/exception/: CustomExceptionHandler.java  ExceptionHandler.java  NotFoundException.java  (+1 more)
src/main/resources/: mybatis-config.xml
src/main/resources/db/migration/: V1_0_0__initial_tables.sql  V1_1_0__insert_data.sql
src/test/java/com/dev/flashcards/: FlashcardsApplicationTests.java
(+28 files in other folders)
